--- a/springbootapp/src/main/resources/application.properties
+++ b/springbootapp/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 #debug=true
 country.name=Belarus
-country.show-population=true
+country.show-population=false
+server.port=8081
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health, info, metrics, env, mappings, beans
+management.endpoint.info.enabled=true
+
+info.app.description=Hey, good morning! That is all basic info I have. Not very informative, but we are here to grasp the idea, aren't we?
