Update to mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.jpa.show-sql=true
+spring.data.mongodb.database=javalab21
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
